--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build --base=./",
-    "lint": "eslint .",
+    "lint": "eslint src --ext js, jsx --report-unused-disable-directives --max-warning 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
